tests/dataset/tpc-ds/compiler/c/q30.error
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c: In function ‘test_TPCDS_Q30_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:318:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  318 |   if (test_TPCDS_Q30_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:322:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  322 |       if (test_TPCDS_Q30_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:382:35: warning: implicit declaration of function ‘avg_by_state_item_list_t_create’ [-Wimplicit-function-declaration]
  382 |   avg_by_state_item_list_t tmp9 = avg_by_state_item_list_t_create(tmp8.len);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:382:35: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:387:9: warning: implicit declaration of function ‘customer_total_return_item_list_t_create’ [-Wimplicit-function-declaration]
  387 |         customer_total_return_item_list_t_create(_gp.items.len);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:387:9: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:410:30: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  410 |   result_item_list_t tmp16 = result_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:411:62: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  411 |       customer_total_return.len * avg_by_state.len * customer.len);
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:447:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  447 |     _json_string(it.c_customer_id);
      |                  ~~^~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:72:32: note: expected ‘char *’ but argument is of type ‘const char *’
   72 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:451:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  451 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:72:32: note: expected ‘char *’ but argument is of type ‘const char *’
   72 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:455:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  455 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:72:32: note: expected ‘char *’ but argument is of type ‘const char *’
   72 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq301916009013/001/prog.c:463:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  463 |   test_TPCDS_Q30_simplified_result = result;
      |                                      ^~~~~~
