tests/dataset/tpc-ds/compiler/c/q30.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct {
  const char *c_customer_id;
  const char *c_first_name;
  const char *c_last_name;
  double ctr_total_return;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int wr_returning_customer_sk;
  int wr_returned_date_sk;
  double wr_return_amt;
  int wr_returning_addr_sk;
} web_return_t;
typedef struct {
  int len;
  web_return_t *data;
} web_return_list_t;
web_return_list_t create_web_return_list(int len) {
  web_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_state;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_customer_id;
  const char *c_first_name;
  const char *c_last_name;
  int c_current_addr_sk;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ctr_customer_sk;
  int ctr_state;
  double ctr_total_return;
} customer_total_return_item_t;
typedef struct {
  int len;
  customer_total_return_item_t *data;
} customer_total_return_item_list_t;
customer_total_return_item_list_t
create_customer_total_return_item_list(int len) {
  customer_total_return_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_total_return_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int state;
  double avg_return;
} avg_by_state_item_t;
typedef struct {
  int len;
  avg_by_state_item_t *data;
} avg_by_state_item_list_t;
avg_by_state_item_list_t create_avg_by_state_item_list(int len) {
  avg_by_state_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(avg_by_state_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *c_customer_id;
  const char *c_first_name;
  const char *c_last_name;
  double ctr_total_return;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q30_simplified_result;
static void test_TPCDS_Q30_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.c_customer_id = "C1",
                            .c_first_name = "John",
                            .c_last_name = "Doe",
                            .ctr_total_return = 150.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q30_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q30_simplified_result.len; i3++) {
      if (test_TPCDS_Q30_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  web_return_t web_returns[] = {(web_return_t){.wr_returning_customer_sk = 1,
                                               .wr_returned_date_sk = 1,
                                               .wr_return_amt = 100.0,
                                               .wr_returning_addr_sk = 1},
                                (web_return_t){.wr_returning_customer_sk = 2,
                                               .wr_returned_date_sk = 1,
                                               .wr_return_amt = 30.0,
                                               .wr_returning_addr_sk = 2},
                                (web_return_t){.wr_returning_customer_sk = 1,
                                               .wr_returned_date_sk = 1,
                                               .wr_return_amt = 50.0,
                                               .wr_returning_addr_sk = 1}};
  int web_returns_len = sizeof(web_returns) / sizeof(web_returns[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 2000}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_state = "CA"},
      (customer_addres_t){.ca_address_sk = 2, .ca_state = "CA"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_customer_id = "C1",
                                        .c_first_name = "John",
                                        .c_last_name = "Doe",
                                        .c_current_addr_sk = 1},
                           (customer_t){.c_customer_sk = 2,
                                        .c_customer_id = "C2",
                                        .c_first_name = "Jane",
                                        .c_last_name = "Smith",
                                        .c_current_addr_sk = 2}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_total_return_item_list_t customer_total_return =
      (customer_total_return_item_list_t){0, NULL};
  customer_total_return_item_list_t tmp4 =
      create_customer_total_return_item_list(customer_total_return.len);
  int tmp5_data[customer_total_return.len];
  list_int tmp5 = {0, tmp5_data};
  int tmp6 = 0;
  for (int i7 = 0; i7 < customer_total_return.len; i7++) {
    customer_total_return_item_t ctr = customer_total_return.data[i7];
    tmp4.data[tmp6] = ctr;
    tmp5.data[tmp6] = ctr.ctr_state;
    tmp6++;
  }
  tmp4.len = tmp6;
  tmp5.len = tmp6;
  list_group_int tmp8 = _group_by_int(tmp5);
  avg_by_state_item_list_t tmp9 = avg_by_state_item_list_t_create(tmp8.len);
  int tmp10 = 0;
  for (int gi = 0; gi < tmp8.len; gi++) {
    _GroupInt _gp = tmp8.data[gi];
    customer_total_return_item_list_t tmp11 =
        customer_total_return_item_list_t_create(_gp.items.len);
    for (int i12 = 0; i12 < _gp.items.len; i12++) {
      tmp11.data[i12] = tmp4.data[_gp.items.data[i12]];
    }
    tmp11.len = _gp.items.len;
    struct {
      int key;
      customer_total_return_item_list_t items;
    } g = {_gp.key, tmp11};
    list_float tmp13 = list_float_create(g.items.len);
    int tmp14 = 0;
    for (int i15 = 0; i15 < g.items.len; i15++) {
      customer_total_return_item_t x = g.items.data[i15];
      tmp13.data[tmp14] = x.ctr_total_return;
      tmp14++;
    }
    tmp13.len = tmp14;
    tmp9.data[tmp10] =
        (avg_by_state_item_t){.state = g.key, .avg_return = _avg_float(tmp13)};
    tmp10++;
  }
  tmp9.len = tmp10;
  avg_by_state_item_list_t avg_by_state = tmp9;
  result_item_list_t tmp16 = result_item_list_t_create(
      customer_total_return.len * avg_by_state.len * customer.len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < customer_total_return.len; tmp18++) {
    customer_total_return_item_t ctr = customer_total_return.data[tmp18];
    for (int tmp19 = 0; tmp19 < avg_by_state.len; tmp19++) {
      avg_by_state_item_t avg = avg_by_state.data[tmp19];
      if (!(ctr.ctr_state == avg.state)) {
        continue;
      }
      for (int tmp20 = 0; tmp20 < customer_len; tmp20++) {
        customer_t c = customer[tmp20];
        if (!(ctr.ctr_customer_sk == c.c_customer_sk)) {
          continue;
        }
        if (!(ctr.ctr_total_return > avg.avg_return * 1.2)) {
          continue;
        }
        tmp16.data[tmp17] =
            (result_item_t){.c_customer_id = c.c_customer_id,
                            .c_first_name = c.c_first_name,
                            .c_last_name = c.c_last_name,
                            .ctr_total_return = ctr.ctr_total_return};
        tmp17++;
      }
    }
  }
  tmp16.len = tmp17;
  result_item_list_t result = tmp16;
  printf("[");
  for (int i21 = 0; i21 < result.len; i21++) {
    if (i21 > 0)
      printf(",");
    result_item_t it = result.data[i21];
    printf("{");
    _json_string("c_customer_id");
    printf(":");
    _json_string(it.c_customer_id);
    printf(",");
    _json_string("c_first_name");
    printf(":");
    _json_string(it.c_first_name);
    printf(",");
    _json_string("c_last_name");
    printf(":");
    _json_string(it.c_last_name);
    printf(",");
    _json_string("ctr_total_return");
    printf(":");
    _json_float(it.ctr_total_return);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q30_simplified_result = result;
  test_TPCDS_Q30_simplified();
  return 0;
}
